# scyseq

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: pages.yml  publish-pypi.yml  publish-testpypi.yml  pytest.yml
all_tests/: alphabet_test.py  information_test.py
docs/source/: algorithmic.rst  conf.py  contributors.rst  devel.md  discretize.rst  exceptions.rst  generators.rst  index.rst  information.rst  introduction.rst  io.rst  library.rst  recurrence.rst  references.bib  references.rst  sequence.rst  stochastic.rst  visualisation.rst
docs/source/notebooks/: infant-mother.ipynb  tutorial.ipynb
docs/source/notebooks/data/: 209_S1  209_S2  test1.cdx
src/scyseq/: __init__.py  algorithmic.py  discretize.py  exceptions.py  generator.py  information.py  io.py  iosymb.py  old_exceptions.py  operation.py  operations.py  recurrence.py  sequence.py  stochastic.py  utils.py  viz.py
src/scyseq/sandbox/: cantor.py  capacity.py  currents.py  cycle.py  demo_recurrence.py  distance.py  information_complement.py  maps.py  markov.py  mutual_lz.py  nessgraph.py  runs.py  stochastic_complement.py  surrogates.py  templates.py  version.py
src/scyseq/sandbox/discretizers/: demo_subdivision.py  event.py  permutation.py  pysom.py  sax.py  variance_cluster.py  variance_cluster_bis.py
src/scyseq/sandbox/iosymb/: ascii.py  cowlog.py  ib.py
src/scyseq/sandbox/iosymb/examples/: multiple.ib  single.ib
src/scyseq/sandbox/tests.old/: new_test.py  test_symbolic.py
tests/: algorithmic_test.py  alphabet_test.py  discretize_test.py  generator_test.py  information_test.py  io_test.py  operations_test.py  recurrence_test.py  sequence_compat_test.py  sequence_test.py  stochastic_test.py  symbol_test.py  test_algorithmic.py  test_alphabet.py  test_sequence.py  test_symbol.py  utils_test.py
tests.old/: recurrence.py  test_runs.py  test_sequence.py  test_stochastic.py
tests_from_old/: test_algorithmic_from_old.py  test_sequence_from_old.py
