[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scyseq"
# version number is dynamically retrieved from __init__/py file
dynamic = ["version"]
description = "Provides objects and tools to analyze symbolic sequences"
readme = "README.md"
authors = [
    { name = "Laurent Pezard", email = "laurent.pezard@univ-amu.fr" },
    { name = "Jean-Luc Blanc", email = "jean-luc.blanc@univ-amu.fr" }
]
license = { text = "BSD-3" }
requires-python = ">=3.8"
dependencies = ["numpy", "matplotlib", "scipy"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
docs = ["sphinx", "sphinx-gallery", "nbsphinx",
"sphinxcontrib-bibtex", "ipykernel"]

[tool.hatch.build.targets.wheel]
packages = ["src/scyseq"]

[tool.hatch.version]
path = "src/scyseq/__init__.py"

[tool.hatch.envs.default]
features = ["dev", "docs"]

[tool.hatch.envs.docs]
features = ["docs"]

[tool.hatch.envs.docs.scripts]
build = "python -m sphinx -b html docs/source docs/build/html"
