[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "scyseq"
# version number is dynamically retrieved from Git tags by hatch-vcs
dynamic = ["version"]
description = "Provides objects and tools to analyze symbolic sequences"
readme = "README.md"
authors = [
    { name = "Laurent Pezard", email = "laurent.pezard@univ-amu.fr" },
    { name = "Jean-Luc Blanc", email = "jean-luc.blanc@univ-amu.fr" }
]
license = { text = "BSD-3" }
requires-python = ">=3.8"
dependencies = ["numpy", "matplotlib", "scipy"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
docs = ["sphinx", "sphinx-gallery", "nbsphinx",
"sphinxcontrib-bibtex", "ipykernel", "myst-parser"]

[tool.hatch.build.targets.wheel]
packages = ["src/scyseq"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/scyseq/_version.py"

[tool.hatch.envs.default]
features = ["dev", "docs"]

[tool.hatch.envs.docs]
features = ["docs"]

[tool.hatch.envs.docs.scripts]
build = "python -m sphinx -b html docs/source docs/build/html"
